# skin-trader

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.cargo/: config.toml
.github/workflows/: fly-deploy.yml  rust.yml
api/: Cargo.toml
api/src/: db.rs  http.rs  lib.rs  nn.rs  update.rs  ws.rs
bitskins/: Cargo.toml
bitskins/src/: conversion.rs  date.rs  db.rs  endpoint.rs  error.rs  http.rs  lib.rs  main.rs  scheduler.rs  trader.rs  update.rs  ws.rs
bot/: Cargo.toml
bot/src/: core.rs  main.rs  scheduler.rs  trader.rs
bots/: Cargo.toml
bots/src/: bitskins_bot.rs  dmarket_bot.rs  lib.rs  scheduler.rs  setup.rs  trader.rs
common/: Cargo.toml
common/src/: lib.rs
dmarket/: Cargo.toml
dmarket/src/: client.rs  db.rs  error.rs  http.rs  lib.rs  main.rs  rate_limiter.rs  schema.rs  sign.rs  trader.rs  updater.rs
migrations/: 20240722020113_create_skins_table.sql  20240727185952_create_items_table.up.sql  20240727191317_create_items_table.sql  20240728052136_create_skins.sql  20240728054957_create_sales_table.sql  20240808221131_create_price_stats.sql  20240824033220_create_market_data_table.sql  20240825002251_create_sticker_table.sql  20240911031505_create_dmarket_items_table.sql  20241012163748_create_offer.sql  20241117182839_account.sql  20241119233502_create_dmarket_sales.sql  20241125003040_create_dmarket_best_prices.sql  20241126043628_create_dmarket_reduced_fees.sql  20241128062724_create_dmarket_stats.sql  20241208170345_create_dmarket_game_titles.sql  20241208230757_create_dmarket_sales.sql  20241208230835_create_dmarket_reduced_fees.sql  20241214032857_create_dmarket_account.sql
sandbox/: Cargo.toml
sandbox/src/: main.rs  plotter.rs  progress_bar.rs  util.rs
scripts/: bitskins-bot.service  bitskins.service  check-skin-trader.service  check-skin-trader.sh  check-skin-trader.timer  dmarket.service  skin-trader.service
src/: api.rs  db.rs  main.rs  plotter.rs  progress_bar.rs  scheduler.rs
src/api/: mod.rs  websocket.rs  ws.rs
