[package]
name = "csgo"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"
anyhow = "1.0.86"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.38.1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
futures = "0.3.30"
dotenvy = "0.15.7"
