[package]
name = "skin-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"
anyhow = "1.0.86"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls", "time"] }
tokio = { version = "1.38.1", features = ["full"] }
futures = "0.3.30"
dotenvy = "0.15.7"
log = "0.4.22"
env_logger = "0.11.3"
indicatif = "0.17.8"
tokio-cron-scheduler = "0.10.2"
