[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "native-tls"], default-features = false }
serde_json = "1.0.120"
anyhow = "1.0.86"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-native-tls", "time"] }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread", "signal"] }
futures = { version = "0.3.25", default-features = false }
dotenvy = "0.15.7"
log = "0.4.22"
env_logger = "0.11.3"
time = "0.3.36"
serde = "1.0.204"
futures-util = "0.3.30"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
strum = { version = "0.26.3", features = ["derive"] }