[package]
name = "bitskins"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "native-tls"], default-features = false }
serde_json = "1.0.120"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-native-tls", "time"] }
log = "0.4.22"
time = "0.3.36"
serde = "1.0.204"
futures-util = "0.3.30"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tokio = { version = "1.39.2", features = ["macros"] }
thiserror = "2.0.0"
strum_macros = "0.26.4"
strum = "0.26.3"
derive_more = { version = "1.0.0", features = ["deref", "display", "into", "from"] }
