[package]
name = "bitskins"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "native-tls"], default-features = false }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "time"] }
log = "0.4.26"
time = "0.3.37"
serde = "1.0.218"
futures = "0.3.31"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.11"
strum_macros = "0.27.1"
strum = "0.27.1"
derive_more = { version = "2.0.1", features = ["deref", "display", "into", "from"] }
anyhow = "1.0.96"
common = { path = "../common" }
tokio-cron-scheduler = { version = "0.13.0", features = ["english"] }
