[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitskins = { path = "../bitskins" }
dmarket = { path = "../dmarket" }
tokio-cron-scheduler = "0.11.0"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread", "signal"] }
log = "0.4.22"
serde_json = "1.0.122"
