[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitskins = { path = "../bitskins" }
tokio-cron-scheduler = { version = "0.13.0", features = ["english"] }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread", "signal"] }
log = "0.4.22"
env_logger = "0.11.5"
dotenvy = "0.15.7"
