[package]
name = "dmarket"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.12.5", features = ["json", "native-tls"], default-features = false }
thiserror = "2.0.0"
url = "2.5.2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_qs = "0.13.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
ringbuffer = "0.15.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
log = "0.4.22"
uuid = { version = "1.10.0", features = ["serde"] }
futures = "0.3.30"
async-stream = "0.3.5"
anyhow = "1.0.86"
common = { path = "../common" }
