[package]
name = "dmarket"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.12.12", features = ["json", "native-tls"], default-features = false }
thiserror = "2.0.11"
url = "2.5.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_qs = "0.13.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
ringbuffer = "0.15.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
log = "0.4.25"
uuid = { version = "1.12.1", features = ["serde"] }
futures = "0.3.31"
async-stream = "0.3.6"
anyhow = "1.0.95"
common = { path = "../common" }
