[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
plotters = "0.3.6"
anyhow = "1.0.86"
bitskins = { path = "../bitskins" }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread", "signal"] }
serde_json = "1.0.122"
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
