[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dmarket = { path = "../dmarket" }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
uuid = { version = "1.10.0", features = ["serde"] }
